--- a/_posts/2020-01-10-retro.md
+++ b/_posts/2020-01-10-retro.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: "매일 회고 - 1월"
+description: "A ton of text to test readability."
+date: 2020-01-10
+tags: [개발, 블로그]
+comments: true
+share: true
+---
+
 # 매일 회고 - 1월
 
 
