--- a/_posts/2020-01-10-retro.md
+++ b/_posts/2020-01-10-retro.md
@@ -3,7 +3,7 @@ layout: post
 title: "매일 회고 - 1월"
 description: "A ton of text to test readability."
 date: 2020-01-10
-tags: [개발, 블로그]
+tags: [매일 회고]
 comments: true
 share: true
 ---
@@ -16,9 +16,9 @@ share: true
 
 ### 읽을 책
 
-* 출 퇴근 길
+* **출 퇴근 길**
   * 어떻게 공부할 것인가?
-* 집에서 읽을 책
+* **집에서 읽을 책**
   * SQL 레벨업
   * Python tricks
   * 리팩토링
@@ -27,17 +27,17 @@ share: true
 
 ### 200106(월)
 
-* 오늘 한 일
+* **오늘 한 일**
   * 아침 운동 시작
   * 코드워즈 2문제(1문제는 못품)
   * 어떻게 공부할 것인가? 책 읽기
-* 잘했던 일
+* **잘했던 일**
   * 아침 운동을 시작했다
   * 피곤함에도 코드워즈 및 책읽기를 실천하였다.
-* 못했던 일
+* **못했던 일**
   * 코드워즈 문제 풀 때, 집중해서 하지 못함
-* 특별한 이벤트
-* 내 생각
+* **특별한 이벤트**
+* **내 생각**
   * 아침 운동을 시작했다. 조금씩 운동량을 늘려가려고 한다.
   * 이해가 잘 안될 때, 그것을 이해하려고 파고드는 노력이 필요하다
   * 문제가 너무 오랫동안 안풀리면 답을 봐서라도, 주어진 문제는 하루안에 해결 보도록 해야한다.
@@ -46,18 +46,18 @@ share: true
 
 ### 200107(화)
 
-* 오늘 한 일
+* **오늘 한 일**
   * 아침 운동 이틀째
   * 코드워즈 문제 도전했으나 실패
   * 책 읽기
-* 잘했던 일
+* **잘했던 일**
   * 아침 운동을 이틀째 하였다.
   * 피곤함에도 코드워즈 및 책읽기를 실천하였다. 그러나 코드워즈는 점점 문제가 잘 안풀린다
-* 못했던 일
+* **못했던 일**
   * 코드워즈 문제 진도가 잘 안나간다
   * 답을 봐야 알 수 있는 문제가 나타나기 시작함
-* 특별한 이벤트
-* 내 생각
+* **특별한 이벤트**
+* **내 생각**
   * 아침 운동은 나름 할만할 것 같다
   * 근데 사실 좀 피곤하긴 하다
   * 요즘에 개발역량 강화를 목적으로 하는 일련의 계획들이 수월하게 잘 되어간다는 느낌을 받지 못하고 있다. 즉 내 실력이 정체되어있다고 느낀다.. 최근에 읽은 어떻게 공부할 것인가? 에서, 이런 과정들이 발전하기 위해서 겪는 당연히 지나야 하는 관문이라고 말해준 것에 깊은 위안을 받았고, 더 달려야겠다라는 생각이 들었다.
@@ -66,15 +66,15 @@ share: true
 
 ### 200108(수)
 
-* 오늘 한 일
+* **오늘 한 일**
   * 아침 운동 3일 째
   * 책 읽기
-* 잘했던 일
+* **잘했던 일**
   * 아침 운동을 3일 째 하였다.
-* 못했던 일
+* **못했던 일**
   * 회사 일 해결 때문에, 집에서 해야할 일을 제대로 하지 못했다.
-* 특별한 이벤트
-* 내 생각
+* **특별한 이벤트**
+* **내 생각**
   * 회사 일에 너무 매몰 되어서, 늦게 퇴근하지 말자
   * 제 때 퇴근하고, 집에와서 내가 해야할 일을 꾸준히 하자
 
@@ -84,24 +84,74 @@ share: true
 
 ### 200109(목)
 
-* 오늘 한 일
+* **오늘 한 일**
   * 아침 운동 4일 째
-* 잘했던 일
+* **잘했던 일**
   * 아침 운동을 4일 째 하였다.
-* 못했던 일
+* **못했던 일**
   * 회사 일 해결 때문에, 집에서 해야할 일을 제대로 하지 못했다. ~~오늘 또..~~
-* 특별한 이벤트
-* 내 생각
+* **특별한 이벤트**
+* **내 생각**
   * 회사 일에 너무 매몰 되어서, 늦게 퇴근하지 말자 ~~근데 또..~~
   * 제 때 퇴근하고, 집에와서 내가 해야할 일을 꾸준히 하자
   * 셀러리 관련해서 회사 업무 제대로 안되는 것이 있어서, 짜증이났다
 
 
 
+### 200112(일)
+
+* **오늘 한 일**
+  * 버드뷰 장고 문제 살펴보기
+  * SQL 레벨업 책 읽기
+* **잘했던 일**
+  * 일일 커밋은 잘 하고 있다.
+* **못했던 일**
+  * 아직 까지 운동을 매일 해야한다는 습관이 안들어있다
+  * 일일 커밋에 대해서, 좀 미리미리 커밋을 해놓아야 겠다
+* **내 생각**
+  * 금요일 쯤이되면, 마음이 많이 풀리는 것 같다 이것은 일일회고를 보면 잘 알 수 가 있다.
+  * 오늘 본 유투브 영상 중에, 개발자는 회사에 속해있더라도 나 스스로를 브랜딩한다고 생각하라고 했던 것에 많은 공감이 갔다. 사실 회사에 있으면서, 회사를 열심히 다니는 것으로도, 사는데는 별 문제가 없을 것이다. 그런데 단순히 그냥 사는 것 이외의 것을 원한다면, 나 자신을 하나의 브랜드로 생각하고 브랜딩하는 것을 게을리 하지 말아야 겠다라는 생각이 들었다.
+  * SQL 레벨업 책을 오랜만에 읽었다. 왠지 SQL 관련해서는 별로 안보고 싶은 것이 있었는데,(이유는 모르겠다) 오늘 오랜만에 봤다. 내용은 SQL 에 관한 것을 보았는데, 예전에 내가 어렵다고 생각했던 것과 달리 내용이 술술 읽히는 것이 신기하였다.
+  * 예전과 비교해서, 확실히 무엇을 할 것인지 정해놓지 않으니, 이랬다 저랬다 하는 경우가 많이 발생했다. 예를 들면, 처음에 목표를 두었던 클린코드는 목표했던 기간 내에, 집중해서 읽을 수 있었는데 그때 이후에는 제대로 못지켰다. 이것을 계기로 이번주 부터는 이번주 목표를 확실히 정한 후 수행할 수 있도록 해야겠다.
+
+## 1월 셋째주
+
+### 읽을 책
+
+* **출 퇴근 길**
+  * 
+* **집에서 읽을 책**
+  * SQL 레벨업
+  * Python tricks
+  * 리팩토링
 
 
-\## 2. 본문 
 
+### 200114(화)
 
+* **오늘 한 일**
+  * 버드뷰 장고 문제 살펴보기
+  * SQL 레벨업 책 읽기
+* **잘했던 일**
+  * 스타크래프트를 지웠다
+  * 버스로 오고가는 중에 꾸준히 책을 보면서 공부하고 있다
+* **못했던 일**
+  * 알람을 잘못맞춰서 아침운동을 가지 못하였다.
+* **내 생각**
+  * 운동과 식단에 대해서 좀더 고민 하고 어떻게 하면 지킬 수 있을까에 대해서 좀 더 고민해봐야 할 것 같다.
+  * 살이 계속찐다..
 
-탄핵소추의 의결을 받은 자는 탄핵심판이 있을 때까지 [링크](#) 그 권한행사가 정지된다. 제2항과 제3항의 처분에 대하여는 ***\*굵게\**** 법원에 제소할 수 없다. 선거와 국민투표의 공정한 관리 **기울임** 및 정당에 관한 사무를 처리하기 위하여 5<sup>3</sup> = 125 선거관리위원회를 둔다. 국무총리는 대통령을 보좌하며, H<sub>2</sub>O 행정에 관하여 대통령의 명을 받아 행정각부를 통할한다. 정당은 법률이 정하는 바에 의하여 <u>밑줄</u> 국가의 보호를 받으며, 국가는 법률이 정하는 바에 의하여 *`파일명`* 정당운영에 필요한 자금을 보조할 수 있다. 모든 국민은 종교의 자유를 가진다. 국회의원은 법률이 정하는 직을 겸할 수 없다. 감사원은 <del>가운데 줄</del> 세입·세출의 결산을 매년 검사하여 대통령과 차년도국회에 <mark>형광펜</mark> 그 결과를 보고하여야 한다.
+### 200119(일)
+
+* **오늘 한 일**
+  * 도서관 책 반납
+  * 책 읽기 - 혼자하는 공부의 정석
+* **잘했던 일**
+  * 딱히 없다
+* **못했던 일**
+  * 일일 커밋 하루를 놓쳤다..
+* **내 생각**
+  * 혼자하는 공부의 정석 이라는 책의 내용 중에, 현재 나에게 적용해서 쓸만한 것들이 많아서 꼭 정리해두어야 겠다라는 생각이 들었다.
+    * 인백기천(남들이 백을 하면, 난 천을 한다) 의 마음가짐을 가지는 것에 대해서 매우 공감을 하였고, 앞으로도 내 인생을 잘 이끌어나가기 위해서 인지하고 있어야 할 마음 가짐이라고 생각하였다.
+    * 어떻게 공부할 것인가? 책에서도 본 내용이였던, 배운 내용을 의도적으로 인출해보는 노력이 필요하다는 것을 똑같이 주장하고 있었다.
+    * 과거에 수능공부 한 것을 생각해 보았을 때, 이 책의 방법과는 전혀 다르게 공부했음을 알게되었고, 앞으로 내가 공부나 혹은 학습을 잘하기 위해서 필요한 것들이 무엇인지에 대해서 알게되었다.
