--- a/_posts/2020-01-10-retro.md
+++ b/_posts/2020-01-10-retro.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "매일 회고 - 1월"
-description: "A ton of text to test readability."
+description: "매일매일 회고 하자!"
 date: 2020-01-10
 tags: [매일 회고]
 comments: true
