--- a/_posts/2020-01-28-SQL 더쉽게 더깊게 정리-2.md
+++ b/_posts/2020-01-28-SQL 더쉽게 더깊게 정리-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "SQL 더쉽게 더깊게 정리 - 1장 데이터베이스와 SQL"
+title: "SQL 더쉽게 더깊게 정리 - 2장 검색의 기본"
 description: "SQL 기초에 대해서 이해 해보자."
 date: 2020-01-28
 tags: [SQL, DB]
