--- a/_posts/2020-01-10-retro.md
+++ b/_posts/2020-01-10-retro.md
@@ -155,3 +155,34 @@ share: true
     * 인백기천(남들이 백을 하면, 난 천을 한다) 의 마음가짐을 가지는 것에 대해서 매우 공감을 하였고, 앞으로도 내 인생을 잘 이끌어나가기 위해서 인지하고 있어야 할 마음 가짐이라고 생각하였다.
     * 어떻게 공부할 것인가? 책에서도 본 내용이였던, 배운 내용을 의도적으로 인출해보는 노력이 필요하다는 것을 똑같이 주장하고 있었다.
     * 과거에 수능공부 한 것을 생각해 보았을 때, 이 책의 방법과는 전혀 다르게 공부했음을 알게되었고, 앞으로 내가 공부나 혹은 학습을 잘하기 위해서 필요한 것들이 무엇인지에 대해서 알게되었다.
+
+
+
+
+
+## 1월 다섯째주
+
+### Done
+
+### To Do
+
+### To Don't
+
+
+
+### 200128(화)
+
+* **오늘 한 일**
+  * 코드워즈 3문제 - 쉬운 것을 풀긴 했지만, TDD를 연습하는 동시에 클린코드를 적용하는 것에 초점을 맞추었다.
+  * airbnb clone coding - django
+  * Sql 더쉽게 더깊게 기초
+* **잘했던 일**
+  * 회사에서 간식을 아예 먹질 않았다.
+  * 점심, 저녁을 샐러드로 먹어보았다.
+  * 집에 와서도 군것질을 하지 않았다.
+* **못했던 일**
+  * 아침운동을 빼먹었다 ㅠ
+* **내 생각**
+  * 어떻게 문제를 풀 것인가의 서문을 읽어보는데, 선생의 입장에서, 학생들 지적 수준에 맞는 문제를 제시함으로써 호기심을 자극한다면, 학생들에게 독자적인 사고에 대한 참맛과 사고방법을 제공할 수 있다라는 내용을 보게 되었다. 후배들에게 이런저런 멘토링을 한다고하는 하는데, 선생 혹은 멘토의 입장에서 나는 그렇지 못하는 쪽이였다는 생각이 쎄게 들었다. 강의 준비, 멘토링 준비를 열심히 하자
+  * 오늘부터 식사를 샐러드로 교체하고, 과자를 아예 끊었다. 생각보다 할만 했다.
+  * 여기서 이제 운동만 적절히 해주면 살빠지는데 문제가 없을 것 같다.
