--- a/_posts/2020-01-10-retro.md
+++ b/_posts/2020-01-10-retro.md
@@ -186,3 +186,20 @@ share: true
   * 어떻게 문제를 풀 것인가의 서문을 읽어보는데, 선생의 입장에서, 학생들 지적 수준에 맞는 문제를 제시함으로써 호기심을 자극한다면, 학생들에게 독자적인 사고에 대한 참맛과 사고방법을 제공할 수 있다라는 내용을 보게 되었다. 후배들에게 이런저런 멘토링을 한다고하는 하는데, 선생 혹은 멘토의 입장에서 나는 그렇지 못하는 쪽이였다는 생각이 쎄게 들었다. 강의 준비, 멘토링 준비를 열심히 하자
   * 오늘부터 식사를 샐러드로 교체하고, 과자를 아예 끊었다. 생각보다 할만 했다.
   * 여기서 이제 운동만 적절히 해주면 살빠지는데 문제가 없을 것 같다.
+
+
+
+### 200129(수)
+
+* **오늘 한 일**
+  * 생활코딩 SQL JOIN 강좌를 들었다.
+  * 코드워즈 2문제를 풀었다
+  * airbnb 클론도 지루하지만 진행하였다
+* **잘했던 일**
+  * 점심, 저녁을 샐러드로 먹었다
+  * 회사에서 간식을 아예 먹지 않았다
+  * 퇴근 후 공부를 꾸준히 하고 있다.
+* **못했던 일**
+  * 딱히 없음
+* **내 생각**
+  * 없음
