--- a/_posts/2020-01-29-SQL JOIN -생코.md
+++ b/_posts/2020-01-29-SQL JOIN -생코.md
@@ -27,7 +27,13 @@ share: true
 
 ### 테이블 쪼개기
 
-#### 
+#### ![image-20200130003556251](assets/image-20200130003556251.png)
+
+![image-20200130003601499](assets/image-20200130003601499.png)
+
+![image-20200130003606630](assets/image-20200130003606630.png)
+
+
 
 * 위의 Topic 테이블을 쪼개서 3개의 테이블로 만든 경우 이다.
 * 이때 장점은 쓰기, 수정하기가 매우 편한다
@@ -43,33 +49,31 @@ share: true
 
 ### INNER JOIN
 
-
+![image-20200130004527980](assets/image-20200130004527980.png)
 
 
 
 ### LEFT JOIN
 
-
+![image-20200130004540914](assets/image-20200130004540914.png)
 
 
 
 ### RIGHT JOIN
 
-
+![image-20200130004607480](assets/image-20200130004607480.png)
 
 
 
 ### FULL OUTER JOIN
 
-
-
-
+![abcde](assets/abcde.png)
 
 
 
 ## 3. LEFT JOIN
 
-
+![image-20200130004540914](assets/image-20200130004540914.png)
 
 * 왼쪽에만 있는 정보를 출력 하는 것
 * 특정한 표(A)를 기준으로 정보를 가지고 올 떄,(A에는 있고, B에는 없는 정보를 가져 올 때)
@@ -81,7 +85,7 @@ share: true
 SELECT * FROM topic LEFT JOIN author on topic.author_id = author.aid;
 ```
 
-
+![image-20200130010148383](assets/image-20200130010148383.png)
 
 * Left Join 했을 때, NULL 이 나온다는 것 왼쪽에 있는 테이블에는 값이 있는데, 그 값에 해당되는 오른쪽 테이블의 행이 없다는 것
 
@@ -96,7 +100,7 @@ on topic.author_id = author.aid
 LEFT JOIN profile ON author.profile_id = profile.pid;
 ```
 
-
+![image-20200130010511546](assets/image-20200130010511546.png)
 
 
 
@@ -108,7 +112,7 @@ on topic.author_id = author.aid
 LEFT JOIN profile ON author.profile_id = profile.pid;
 ```
 
-
+![image-20200130010148383](assets/image-20200130010148383.png)
 
 
 
@@ -121,13 +125,13 @@ LEFT JOIN profile ON author.profile_id = profile.pid
 WHERE aid = 1;
 ```
 
-
+![image-20200130011128689](assets/image-20200130011128689.png)
 
 
 
 ## 4. INNER JOIN
 
-
+![image-20200130004527980](assets/image-20200130004527980.png)
 
 * 양쪽 모두 공통으로 들어있는 행을 보여준다.
 * NULL이 존재 하지 않는다.
@@ -143,15 +147,13 @@ INNER JOIN profile
 ON author.profile_id = profile.pid;
 ```
 
-
-
-
+![image-20200130012515454](assets/image-20200130012515454.png)
 
 
 
 ## 5. FULL OUTER JOIN
 
-
+![abcde](assets/abcde.png)
 
 * 일종의 합집합
 
@@ -163,7 +165,7 @@ UNION
 (SELECT * FROM topic RIGHT JOIN author ON topic.author_id = author.aid)
 ```
 
-
+![image-20200130013239226](assets/image-20200130013239226.png)
 
 * `INNER JOIN`의 결과 + `A에만 있는 행` + `B에만 있는 행`을 보여준다.
 * `FULL OUTER JOIN` 자체를 `DBMS`에서 제공하진 않고, 위와 같이 `UNION` 으로 보여 줄 수 있다.
@@ -172,11 +174,13 @@ UNION
 
 ## 6. EXCLUSIVE LEFT JOIN
 
-![image-20200130013516409](assets/image-20200130013516409.png)
+![image-20200130013516409](./assets/image-20200130013516409.png)
 
 * 어느 특정 테이블에 있는 것만 가져올 수 있다.
 
 
+
+![abcde2](assets/abcde2.png)
 
 ````sql
 SELECT * 
