--- a/_posts/2020-01-29-SQL JOIN -생코.md
+++ b/_posts/2020-01-29-SQL JOIN -생코.md
@@ -174,7 +174,7 @@ UNION
 
 ## 6. EXCLUSIVE LEFT JOIN
 
-![image-20200130013516409](assets/image-20200130013516409-0390934.png)
+![image-20200130013516409](../images/image-20200130013516409.png)
 
 * 어느 특정 테이블에 있는 것만 가져올 수 있다.
 
