add db index part one

--- a/_posts/2020-01-29-SQL JOIN -생코.md
+++ b/_posts/2020-01-29-SQL JOIN -생코.md
@@ -17,7 +17,43 @@ share: true
 
 ### 쪼개 지지 않은 테이블
 
-![image-20200130003545984](/images/image-20200130003545984.png)
+![image-20200130003545984](../assets/images/abcde.png)
+
+![abcde2](../assets/images/abcde2.png)
+
+
+
+![image-20200130003545984](../assets/images/image-20200130003545984.png)
+
+![image-20200130003556251](../assets/images/image-20200130003556251.png)
+
+![image-20200130003601499](../assets/images/image-20200130003601499.png)
+
+![image-20200130003606630](../assets/images/image-20200130003606630.png)
+
+![image-20200130004527980](../assets/images/image-20200130004527980.png)
+
+![image-20200130004540914](../assets/images/image-20200130004540914.png)
+
+![image-20200130004607480](../assets/images/image-20200130004607480.png)
+
+![image-20200130010148383](../assets/images/image-20200130010148383.png)
+
+![image-20200130010511546](../assets/images/image-20200130010511546.png)
+
+![image-20200130010747978](../assets/images/image-20200130010747978.png)
+
+![image-20200130011128689](../assets/images/image-20200130011128689.png)
+
+![image-20200130012515454](../assets/images/image-20200130012515454.png)
+
+![image-20200130013239226](../assets/images/image-20200130013239226.png)
+
+![image-20200130013516409](../assets/images/image-20200130013516409.png)
+
+![image-20200130014639274](../assets/images/image-20200130014639274.png)
+
+![image-20200130015823481](../assets/images/image-20200130015823481.png)
 
 * 이 Topic 테이블의 장점은 한눈에 읽기가 쉽다는 점이다.
 * 그러나, 노란색으로 표시된 것과 같이 중복이 존재하게 된다.
@@ -27,7 +63,7 @@ share: true
 
 ### 테이블 쪼개기
 
-#### ![image-20200130003556251](/images/image-20200130003556251.png)
+#### ![image-20200130003556251](../assets/images/image-20200130003556251.png)
 
 ![image-20200130003601499](/images/image-20200130003601499.png)
 
