--- a/_posts/2020-01-30-DB Index-1.md
+++ b/_posts/2020-01-30-DB Index-1.md
@@ -38,7 +38,7 @@ share: true
 
 > 책 맨 뒷부분에 `찾아보기` 를 활용하여 찾는 것과 비슷한 개념이다.
 
-![image-20200130231739515](../assets/images/image-20200130231739515.png)
+![image-20200130231739515](/images/image-20200130231739515.png)
 
 
 
@@ -69,7 +69,7 @@ CREATE TABLE userTbl
 
 * 위와 같이 `userID`를 `PRIMARY KEY`로 지정하면 자동으로 `userID` 열에 클러스터형 인덱스가 생성된다.
 
-![image-20200130233430474](../assets/images/image-20200130233430474.png)
+![image-20200130233430474](/images/image-20200130233430474.png)
 
 <`userID` 기준으로 데이터가 정렬 됨을 확인할 수 있다.>
 
@@ -90,7 +90,7 @@ c INT
 SHOW INDEX FROM tbl1;
 ```
 
-![image-20200130233846718](../assets/images/image-20200130233846718.png)
+![image-20200130233846718](/images/image-20200130233846718.png)
 
 <결과를 보았을 때, `key_name`이 `primary` 인것을 보아서, 클러스터형 인덱스로 볼 수 있다(예외가 있긴 함)>
 
@@ -107,7 +107,7 @@ d INT
 SHOW INDEX FROM tbl3;
 ```
 
-![image-20200130234154798](../assets/images/image-20200130234154798.png)
+![image-20200130234154798](/images/image-20200130234154798.png)
 
 
 
@@ -124,7 +124,7 @@ d INT
 SHOW INDEX FROM tbl4;
 ```
 
-![image-20200130234325051](../assets/images/image-20200130234325051.png)
+![image-20200130234325051](/images/image-20200130234325051.png)
 
 
 
@@ -139,7 +139,7 @@ d INT
 SHOW INDEX FROM tbl5;
 ```
 
-![image-20200130234436257](../assets/images/image-20200130234436257.png)
+![image-20200130234436257](/images/image-20200130234436257.png)
 
 
 
@@ -152,7 +152,7 @@ INSERT INTO tbl5 values(1, 1, 1, 1);
 SELECT * FROM tbl5;
 ```
 
-![image-20200130234812827](../assets/images/image-20200130234812827.png)
+![image-20200130234812827](/images/image-20200130234812827.png)
 
 * 1 값이 나중에 들어갔음에도 불구하고, a열 기준으로 정렬이 되어있다.
 
