changing image path

--- a/_posts/2020-01-30-DB Index-1.md
+++ b/_posts/2020-01-30-DB Index-1.md
@@ -30,9 +30,9 @@ share: true
 
 * 지나치게 생성하면 오히려 성능이 떨어질 수 있다.
   * 풀 테이블 스캔을 하는 것이 오히려 성능이 좋을 때도 있다.
-* 인덱스가 데이터베이스 공간을 차지해서 추가적인 공간이 필요해지는데, 대략 데이터베이스 크기의 10% 정도의 추가 공간이 필요하다.
+* 인덱스가 <u>데이터베이스 공간을 차지해서 추가적인 공간이 필요</u>해지는데, 대략 데이터베이스 크기의 10% 정도의 추가 공간이 필요하다.
 * 처음 인덱스를 생성하는데 시간이 많이 소요될 수 있다.
-* 데이터의 변경 작업(insert, update, delete)이 자주 일어날 경우에는 오히려 성능이 많이 나빠질 수도 있다.
+* <u>데이터의 변경 작업(insert, update, delete)이 자주 일어날 경우에는 오히려 성능이 많이 나빠질 수도 있다.</u>
 
 ### 가장 쉬운 예제
 
