--- a/_posts/2020-01-29-SQL JOIN -생코.md
+++ b/_posts/2020-01-29-SQL JOIN -생코.md
@@ -17,13 +17,13 @@ share: true
 
 ### 쪼개 지지 않은 테이블
 
-![image-20200130003545984](../assets/images/abcde.png)
+![image-20200130003545984](/images/abcde.png)
 
-![abcde2](../assets/images/abcde2.png)
+![abcde2](/images/abcde2.png)
 
 
 
-![image-20200130003545984](../assets/images/image-20200130003545984.png)
+![image-20200130003545984](/images/image-20200130003545984.png)
 
 ![image-20200130003556251](../assets/images/image-20200130003556251.png)
 
