--- a/_posts/2020-02-04-데이터베이스 모델링.md
+++ b/_posts/2020-02-04-데이터베이스 모델링.md
@@ -1,10 +1,12 @@
+---
 layout: post
-title: "관계형 데이터 모델링(2-1) 전체 흐름"
+title: "관계형 데이터 모델링(1, 2) 전체 흐름"
 description: "생활코딩 데이터베이스 모델링"
 date: 2020-02-04
 tags: [db, modeling]
 comments: true
 share: true
+---
 
 
 
