--- a/_posts/2020-02-04-데이터베이스 모델링(3).md
+++ b/_posts/2020-02-04-데이터베이스 모델링(3).md
@@ -30,7 +30,7 @@ share: true
 
 ### Entity Relationship Diagram
 
-![image-20200204231850792](../assets/images/image-20200204231850792.png)
+![image-20200204231850792](/images/image-20200204231850792.png)
 
 * **정보**
   * 정보를 발견하고 다른 사람들에게 표현할 수 있게 도와준다.
@@ -48,9 +48,9 @@ share: true
 
 ## 4-2. 관계형 데이터베이스 다운 개념의 구조
 
-![image-20200204232248304](../assets/images/image-20200204232248304.png)
+![image-20200204232248304](/images/image-20200204232248304.png)
 
-![image-20200204232438860](../assets/images/image-20200204232438860.png)
+![image-20200204232438860](/images/image-20200204232438860.png)
 
 <관계형 데이터베이스에 알맞는 그림>
 
@@ -58,9 +58,9 @@ share: true
 
 ### 그 이유는?
 
-![image-20200204232515854](../assets/images/image-20200204232515854.png)
+![image-20200204232515854](/images/image-20200204232515854.png)
 
-![image-20200204232812637](../assets/images/image-20200204232812637.png)
+![image-20200204232812637](/images/image-20200204232812637.png)
 
 <매우 큰 테이블 - 모든 컬럼 값을 다 넣어 놓았다.>
 
@@ -73,7 +73,7 @@ share: true
 
 -> 표를 쪼갠다
 
-![image-20200204233033941](../assets/images/image-20200204233033941.png)
+![image-20200204233033941](/images/image-20200204233033941.png)
 
 <JOIN을 통해서, 필요에 따라서 테이블을 합성해서 사용할 수 있다>
 
@@ -85,11 +85,11 @@ share: true
 
 * Entity -> Table
 
-![image-20200204233303586](../assets/images/image-20200204233303586.png)
+![image-20200204233303586](/images/image-20200204233303586.png)
 
 
 
-![image-20200204233656699](../assets/images/image-20200204233656699.png)
+![image-20200204233656699](/images/image-20200204233656699.png)
 
 
 
@@ -102,11 +102,11 @@ share: true
 
 ## 4-4. 엔티티 정의
 
-![image-20200204234901505](../assets/images/image-20200204234901505.png)
+![image-20200204234901505](/images/image-20200204234901505.png)
 
 ## 4-5. 속성 정의
 
-![image-20200204234918086](../assets/images/image-20200204234918086.png)
+![image-20200204234918086](/images/image-20200204234918086.png)
 
 
 
@@ -119,39 +119,39 @@ share: true
 * 가장 중요한 것
   * 대상을 제외한 누구도 같은 값을 가지면 안된다
 
-#### ![image-20200204235328659](../assets/images/image-20200204235328659.png)
+#### ![image-20200204235328659](/images/image-20200204235328659.png)
 
 
 
 * Composite Key
 
-![image-20200204235442257](../assets/images/image-20200204235442257.png)
+![image-20200204235442257](/images/image-20200204235442257.png)
 
-![image-20200204235714537](../assets/images/image-20200204235714537.png)
+![image-20200204235714537](/images/image-20200204235714537.png)
 
 
 
 ## 4-7. 엔티티 간의 연결
 
-![image-20200205000316226](../assets/images/image-20200205000316226.png)
+![image-20200205000316226](/images/image-20200205000316226.png)
 
 
 
 ## 4-8. Cardinality
 
-![image-20200205000617392](../assets/images/image-20200205000617392.png)
+![image-20200205000617392](/images/image-20200205000617392.png)
 
 <1:1 관계>
 
 
 
-![image-20200205000738498](../assets/images/image-20200205000738498.png)
+![image-20200205000738498](/images/image-20200205000738498.png)
 
 <1:N 관계>
 
 
 
-![image-20200205000916660](../assets/images/image-20200205000916660.png)
+![image-20200205000916660](/images/image-20200205000916660.png)
 
 <N:M 관계>
 
@@ -159,13 +159,13 @@ share: true
 
 ## Optionality
 
-![image-20200205001228965](../assets/images/image-20200205001228965.png)
+![image-20200205001228965](/images/image-20200205001228965.png)
 
 
 
 
 
-![image-20200205001347261](../assets/images/image-20200205001347261.png)
+![image-20200205001347261](/images/image-20200205001347261.png)
 
 
 
@@ -173,5 +173,5 @@ share: true
 
 ## 4-10. ERD 완성
 
- ![image-20200205002024398](../assets/images/image-20200205002024398.png)
+ ![image-20200205002024398](/images/image-20200205002024398.png)
 
