--- a/_posts/2020-02-04-데이터베이스 모델링(3).md
+++ b/_posts/2020-02-04-데이터베이스 모델링(3).md
@@ -159,17 +159,11 @@ share: true
 
 
 
-## Optionality
+## 4-9. Optionality
 
 ![image-20200205001228965](/images/image-20200205001228965.png)
 
-
-
-
-
 ![image-20200205001347261](/images/image-20200205001347261.png)
-
-
 
 
 
