--- a/_posts/2020-02-05-데이터베이스 모델링(5, 6).md
+++ b/_posts/2020-02-05-데이터베이스 모델링(5, 6).md
@@ -10,10 +10,19 @@ share: true
 
 
 
-## 6.1 정규화 소개
+## 6.2 제1 정규화
 
-![image-20200205223829553](../../../../Library/Application%20Support/typora-user-images/image-20200205223829553.png)
+### Atomic colums
 
 
 
-![image-20200205223921836](../images/image-20200205223921836.png)
+## 	6.3 제2 정규화
+
+### No partial dependencies
+
+
+
+## 6.3 제3 정규화
+
+### No transitive dependencies
+
