--- a/_posts/2020-02-10-AWS 주요 서비스 소개.md
+++ b/_posts/2020-02-10-AWS 주요 서비스 소개.md
@@ -16,7 +16,7 @@ share: true
 
 ### 컴퓨팅 서비스 소개
 
-* **Amazon EC2**
+* **Amazon EC2**(Elastic Compute Cloud)
   * 재구성이 가능한 컴퓨팅 리소스
   * 쉽게 확장 / 축소되는 컴퓨팅 용량
   * '고객 업무' 영역에 따른 다양한 인스턴스 타입 제공
@@ -25,6 +25,17 @@ share: true
   * 자동 서버 확장 / 축소
 * **AWS Lambda**
   * 서버리스 컴퓨팅
+* **AWS Lightsail**
+  * 간단한 가상화 프라이빗 서버가 필요한 개발자에게 웹 사이트와 웹 애플리케이션을 배포하고 관리하는 기능과 컴퓨팅, 스토리지, 네트워크를 빠르고, 손쉬우며 저렴한 비용으로 제공
+
+
+
+### 네트워킹 서비스
+
+* Amazon Route 53
+* Amazon VPC(Virtual Private Cloud)
+  * AWS 클라우드에서 논리적으로 격리된 네트워크 공간을 할당하여 가상 네트워크에서 AWS 리소스를 이용할 수 있는 서비스를 제공
+* Amazon ELB(Elastic Load Balancer)
 
 
 
@@ -52,24 +63,19 @@ share: true
   * 특징
     * EBS가 여러 개의 EC2에 attach 불가
     * 한개의 EC2에 여러 개의 EBS를 attach 가능
+    * 서버에 장착하는 서버용 하드디스크
 
 * **Amazon CloudFront**
 
   * 컨텐츠 전송 네트워크
-
     * 캐싱을 통한 컨텐츠 가속
-
   * 특징
-
     * 컨텐츠를 캐싱하여 성능 가속
-
     * AWS 서비스 -> CloudFront 간 데이터 전송 뮤료
-
     * 글로벌 고속 백본 네트워크 확보
-
     * DDoS 방어 무료 제공
 
-      
+  
 
 ### 데이터 베이스
 
