--- a/_posts/2020-03-04-코딩의신아샬영상정리-3.md
+++ b/_posts/2020-03-04-코딩의신아샬영상정리-3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[코딩의 신 아샬] git의 달이이 되는 방법"
+title: "[코딩의 신 아샬] git의 달인이 되는 방법"
 description: "코딩의 신 아샬 영상의 내용을 정리하고 느낀점을 적는다."
 date: 2020-03-04
 tags: [코딩의 신 아샬, git]
