--- a/_posts/2020-03-10-코딩의신아샬영상정리-6.md
+++ b/_posts/2020-03-10-코딩의신아샬영상정리-6.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[코딩의 신 아샬] 코딩 테스트에 대한 생각"
+title: "[코딩의 신 아샬] 프로그래밍을 공부할 때 뭘 만들어야 하나?"
 description: "코딩의 신 아샬 영상의 내용을 정리하고 느낀점을 적는다."
 date: 2020-03-10
 tags: [코딩의 신 아샬]
@@ -11,32 +11,20 @@ share: true
 
 
 
--   [영상](https://www.youtube.com/watch?v=FTkK1f0Yebc)
+-   [영상](https://www.youtube.com/watch?v=On8REbDpCiw)
 
     
 
-    - ## 내용 요약
+    - - ## 내용 요약
 
-      - 종류
-        - 화이트 보드
-          - 어떤 식으로 사고 하는지를 볼 수 있다.
-          - 문제 자체를 맞추는 것은 중요하지 않다.
-        - 직접 IDE로 코딩
-          - 숙련도를 볼 수 있다.
-      - 예를 들어 퀵소트 일 떄,
-        - 퀵소트 자체를 못 짤 순 있다.
-        - 그러나 퀵소트 관련된 힌트들을 알려주었을 때, 힌트를 통해 문제 해결을 할 수 있어야 한다.
-      - 여러 질문을 하면서, 힌트를 주는 것은 플러스 점수를 주기 위한 질문 이다.
+        - 프레임워크 혹은 라이브러리를 만들자
+          - 프레임워크 혹은 라이브러리를 그대로 베끼면서, 코드 작성할 때 왜 이런 결정을 내렸는지에 대해서 알 수 있게 된다.
     
-      ## 느낀점
+        ## 느낀점
     
-      - 이전까지 기준으로 면접에서 화이트 보드, 직접 IDE 코딩에 대해서 모두 두려움을 가지고 있었다.
-      - 일단 화이트 보드는 내가 알고리즘을 잘 못하기 때문에 기본적으로 선호하지 않았고,
-      - 직접 IDE 로 코딩 하는 것 역시, 내가 주로 코딩하는 방식이 공식 문서 같은 곳의 코드들을 그대로 보고 따라 적은 후 수정하는 코드들이 많았기 때문에 나 스스로 사고 하는 힘이 부족했었다.
-      - 그러나, TDD 를 하고 나서는 문제를 정의하고, 정의한 문제의 조건을 정리하고 정리한 조건을 기준으로 테스트 코드를 만들면서, 문제를 풀어가는데 익숙해 지다보니, 위의 과정들에 있어서 어느정도는 예전보다 자신감이 많이 생겼다.
-      - 코드워즈를 풀면서 늘 IDE를 활용해서 TDD로 문제를 풀기 때문에 혹시나 나중에 기회가 되면, 면접이 아니더라도 내가 올바르게 하고 있는 것인지에 대한 한번 평가를 받아보고 싶다.
-      - 무튼 간에, 코딩 테스트에 대해서 나도 긍정적으로 생각한다.
-      - 그러나, 특정 알고리즘을 알아야 풀 수 있는 문제 라던지, 지나치게 어려운 문제에 대해, 이걸 풀면 잘하는 것, 못풀면 못하는 것 식의 코딩 교육이 이루어지는 것 같아서 매우 안타깝다
-      - 무엇보다 문제는 대부분의 현업 개발 회사들의 대부분이 위의 마인드를 가지고 시험 문제를 낸다는 것이다.
-      - 이것은 매우 옳지 못하다고 생각하고 혹여나 저런 문제를 달달 외워서 맞춘다고 하더라도, 실무를 할 때 하나도 도움이 되지 않는다고 생각한다.
-      - 오히려 쉬운 문제를 풀더라도, 클린한 코드를 작성하기 위해서 어떤 노력을 기울이는 지를 보는 것이, 경력자건, 신입이건, 더 좋은 개발자를 뽑는데 더 좋은 기준이 라고 생각한다.
+        - 개인적으로는 영상 내용에서 나온 flask 정도는 그냥 코드를 쭉 보는 정도는 할 수 있을 것 같은데, 그대로 타이핑해서 작성하는 것은 조금 무리인 것 같다.
+        - 그러나, flask 보다 훨씬 작은 웹 프레임워크 같은 것을 찾아서 해보는 것은 좋은 챌린지 가 될 수 있을 것 같다.
+        - 개인적인 공부방법으로 완성된 프로젝트의 Commit 을 처음부터 끝까지 보면서, 똑같이 따라쳐보는 학습법을 사용한다.
+        - 커밋 내용을 보고, 개발자가 이 때는 왜 이렇게 작성했을 지 생각해보면서, 똑같이 따라치고, 내가 모르거나 새롭게 배운 것이 있다면 따로 적어 둔다.
+        - 이런 식으로 하면 좋은 것이 실행되는 실제 결과물들을 실행시켜보면서 코드를 짤 수 있고, 무작정 코드 보고 처음부터 끝까지 베끼는 것보다, 커밋 메세지를 보면서, 어떤 사고의 과정을 거치면서 코드 작성했는지를 순서대로 볼 수 있다
+        - 무튼 프레임워크 혹은 라이브러리 간단한 것 부터, 그대로 베껴보는 것을 꼭 해보자! 하다가 리뷰할 것이 발견되면 기여를 해봐도 재미가 있을것 같다
