--- a/_posts/2020-03-14-코딩의신아샬영상정리-11.md
+++ b/_posts/2020-03-14-코딩의신아샬영상정리-11.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+입문자를 위한 책을 추천해 주세요layout: post
 title: "[코딩의 신 아샬] 책 읽고 공부한 걸 블로그에 요약 정리하고 있는데 더 좋은 방법이 있을까요?"
 description: "코딩의 신 아샬 영상의 내용을 정리하고 느낀점을 적는다."
 date: 2020-03-25
