--- a/_posts/2020-03-25-정보 수집 대화법.md
+++ b/_posts/2020-03-25-정보 수집 대화법.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[김창준의 정보 수집 대화법] 논리가 우리를 구원할 것이다 : 논리에 대한 환상
+title: [김창준의 정보 수집 대화법] 논리가 우리를 구원할 것이다 : 논리에 대한 환상
 description: "김창준의 정보 수집 대화법 강의를 듣고 내 생각을 정리한다."
 date: 2020-03-25
 tags: [김창준의 정보 수집 대화법]
