--- a/_posts/2020-03-27-코딩의신아샬영상정리-12.md
+++ b/_posts/2020-03-27-코딩의신아샬영상정리-12.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[코딩의 신 아샬] 입문자를 위한 책을 추천해 주세요
+title: [코딩의 신 아샬] 입문자를 위한 책을 추천해 주세요
 description: "코딩의 신 아샬 영상의 내용을 정리하고 느낀점을 적는다."
 date: 2020-03-27
 tags: [코딩의 신 아샬]
