--- a/_posts/2020-03-26-정보 수집 대화법-2.md
+++ b/_posts/2020-03-26-정보 수집 대화법-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [김창준의 정보 수집 대화법] 질문을 하는 것이 정보를 얻는데 걸림돌이 될 수 있다.
+title: "[김창준의 정보 수집 대화법] 질문을 하는 것이 정보를 얻는데 걸림돌이 될 수 있다."
 description: "김창준의 정보 수집 대화법 강의를 듣고 내 생각을 정리한다."
 date: 2020-03-26
 tags: [김창준의 정보 수집 대화법]
