--- a/_posts/2020-03-27-정보 수집 대화법-3.md
+++ b/_posts/2020-03-27-정보 수집 대화법-3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [김창준의 정보 수집 대화법] 말을 잘해야 한다: 말을 잘 하는 것이 오히려 불리하게 작용하는 이유
+title: "[김창준의 정보 수집 대화법] 말을 잘해야 한다: 말을 잘 하는 것이 오히려 불리하게 작용하는 이유"
 description: "김창준의 정보 수집 대화법 강의를 듣고 내 생각을 정리한다."
 date: 2020-03-27
 tags: [김창준의 정보 수집 대화법]
