--- a/_posts/2020-03-27-코딩의신아샬영상정리-12.md
+++ b/_posts/2020-03-27-코딩의신아샬영상정리-12.md
@@ -15,8 +15,17 @@ share: true
 
 ## 내용 요약
 
-* 
+* 대부분 책 추천을 해줄 때 본인의 뇌피셜로 추천을 해주게 된다.
+* 가능하면, 내가 이전에 어떻게 공부했는지를 고민해보자 사실 어떤 책으로 공부하느냐는 그리 중요하진 않다.
+* 쉬운 책이 무조건적으로 입문자에게 좋은 것은 아니다
+* 쉬운 책은 오히려 틀린 내용을 설명하는 경우가 꽤 있다.
+* 무언가를 잘하고 싶을 때, 그 방법은 단 한가지 이다. 비급은 없다 심층훈련과 의도적 수련으로 계속적으로 연습하는 방법 밖에 없다.
+* 책보다 공부법 자체가 중요하다.
 
 ## 느낀점
 
-* 
+* 제목만 보았을 때는 책에 관한 얘기 같지만, 사실 책 보다는 어떻게 공부법을 가지고 공부할지가 중요하다는 얘기를 한다.
+* 특히 탤런트 코드의 예를들 면서, 심층 훈련, 의도적 수련의 중요성에 대해서 말한다.
+* 이에 매우 동의하는 바이다. 어떤 책만 보면 프로그래밍을 잘한다 라는 것은 없다. 어떤 책이던지 간에 내가 어떻게 책의 내용을 받아들이고 내것으로 만드느냐가 중요하다.
+* 물론, 좋은 책이 있는 것은 맞고 그 책을 통해서 더 빠른 길을 갈 수 있다.
+* 심층 훈련과 의도적 수련은 당연한 것이고, 더하여서 좋은 책을 통해 빠른 길을 갈 수 있도록 좋은 책을 스스로 판별해 내는 능력, 흔히 알려진 책들에 대해서 정보를 얻고 학습을 할 수 있는 것들이 필요하다고 생각한다
