--- a/_posts/2020-03-25-정보 수집 대화법.md
+++ b/_posts/2020-03-25-정보 수집 대화법.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "[김창준의 정보 수집 대화법] 논리가 우리를 구원할 것이다 : 논리에 대한 환상"
+title: "[김창준의 정보 수집 대화법] 원리와 핵심을 얻자: 그러면 가짜를 얻게 될 것이다"
 description: "김창준의 정보 수집 대화법 강의를 듣고 내 생각을 정리한다."
-date: 2020-03-25
+date: 2020-04-07
 tags: [김창준의 정보 수집 대화법]
 comments: true
 share: true
@@ -11,14 +11,23 @@ share: true
 
 ## 간단한 내용 정리
 
-* 질문을 할 때, 논리적으로 너무 매몰되지 말자 그보다는 상대의 감정 상태에 대해서 파악하고 적절하게 질문을 할 수 있어야 한다.
-* 논리적인 질문으로 인해서 프레셔를 받으면 가짜 답을 할 가능성이 크다.
-* 논리적인 질문을 한다고 논리적인 답변을 하지는 않는다.
+* 원리와 핵심에 대해 물어봤을 때, 피상적인 정보가 나오기 쉽다
+* 전문가들은 어떤 원리 원칙을 가지고 작업할 것 같지만 오히려 본인의 직관에 의해 움직이는 경우가 더 많다.
+* 대신에, 상황에서 어떤 행동을 했는지에 대해서 물어보고, 그 행동을 통해서 유추를 한다.
+
+* 예시
+  * 원리와 핵심을 물어볼 때
+    * 인터뷰에서 가장 중요한 것들이 무엇이 있을까?
+  * 상황과 행동을 물어볼 때
+    * 실제 경험에 대해서 물어본다.
+* 답변자에게 실제 있었던 경험을 상기시키는 것이 중요
+* 상황과 행동을 물어봐야 더 정확한 정보가 나온다
 
 ## 느낀점
 
-* 우리는 흔히 논리적으로 질문을 했야만 상대방도 논리적으로 이해 할 수 있을 것이라고 생각한다. 나 또한 그랬기 때문에, 논리적으로 말하려고 굉장히 많이 노력하는 편이다.
-* 그러나, 강의 내용에서는 논리적인 질문 자체의 중요성 보다는 상대방의 감정 상태에 따라서 적절한 대화법을 고려해야한다고 말한다.
-* 특히 나같은 경우에 면접 때 급 들어오는 논리적 답변을 요구하는 질문 때문에, 당황해서 나도 모르게 헛소리가 나오는 경우도 있었다
-* 면접관의 입장에서 인터뷰 보는 사람들의 감정을 잘 살피고, 편안한 마음 상태에서 질문을 할 수 있도록 할 필요가 있다고 느낀다
-* 또한 사람 간의 다툼이 있을 때도, 아무리 논리적으로 설득하려고 따져들어도 상대방 감정이 상해있다면, 논리건 뭐건 그냥 소리치고 싸우는 것을 많이 보아왔기 때문에, 대화를 통해서 무언가를 얻어내거나, 원활히 이어나가기 위해서는 상대방의 감정에 대해서 더욱 귀기울일 필요가 있을 것 같다.
+* 이 영상의 요지는 딱딱한 원리 원칙은 답변자에게 거짓말을 유도 한다는 것이다.
+* 내 생각에 그 이유는 간단하다. 원리 원칙 적인 답변을 평소에 별로 생각을 해보지 않았기 때문..
+* 그러나, 상황과 행동에 대한 것은 나의 경험을 바탕으로 스토리 텔링 하는 것이기 때문에 지어서 말할 수 없다.
+* 더 좋게 보이기 위해서 거짓말을 하거나 말을 지을 수 있는 가능성이 있긴 하겠지만, 사실 그런 것들은 그 사람의 얼굴 표정과 몸짓을 통해서 다 티가 난다고 개인적으로는 생각한다.
+* 아무튼 간에 상대방의 진실된 마음을 끌어내기위해서 본인의 경험, 상황, 행동을 마음 편하게 말할 수 있는 환경을 만들어주고, 그 상황에 대한 상대방의. 행동으로 어떤 스타일인지 유추할 수 있고, 그럴 수 있도록 노력해야한다.
+
