--- a/_posts/2020-04-07-정보 수집 대화법-4.md
+++ b/_posts/2020-04-07-정보 수집 대화법-4.md
@@ -1,46 +1,24 @@
 ---
 layout: post
-title: "[피플웨어] 피플웨어 인용 문구 정리"
-description: "피플웨어를 읽고 인용 문구를 정리한다."
-date: 2020-04-21
-tags: [피플웨어]
+title: "[김창준의 정보 수집 대화법] 논리가 우리를 구원할 것이다 : 논리에 대한 환상"
+description: "김창준의 정보 수집 대화법 강의를 듣고 내 생각을 정리한다."
+date: 2020-04-07
+tags: [김창준의 정보 수집 대화법]
 comments: true
 share: true
 
 ---
 
-## 1부 인적 자원관리
+## 간단한 내용 정리
 
-### 1장 지금 어디선가 프로젝트가 실패하고 있다.
+* 질문을 할 때, 논리적으로 너무 매몰되지 말자 그보다는 상대의 감정 상태에 대해서 파악하고 적절하게 질문을 할 수 있어야 한다.
+* 논리적인 질문으로 인해서 프레셔를 받으면 가짜 답을 할 가능성이 크다.
+* 논리적인 질문을 한다고 논리적인 답변을 하지는 않는다.
 
-> 우리가 연구한 망한 프로젝트 중 압도적인 대다수에는 실패 원인으로 꼽을 만한 기술적인 문제가 하나도 없었다.
+## 느낀점
 
-
-
-> 우리 업무에서 주요 문제는 본질적으로 기술적인 무제가 아니라 사회학적인 문제다
-
-
-
-> 관리자가 업무에서 인간적인 측면보다 기술적인 측면에 집중하는 주요 이유는 기술적인 측면이 더 중요해서가 아니라 집중하기가 더 쉽기 때문이다.
-
-
-
-### 2장 치즈버거를 만들라, 치즈버거를 팔라
-
-> 실수를 허용하라
-
-
-
-> 실수를 용납하지 않는 분위기가 자리 잡으면 사람들은 바로 방어적으로 변한다.
-
-
-
-> 생산환경의 관리방식을 맹목적으로 채택한 관리자에게는 직원들의 개성 표현이 지속적인 골짓거리이고, 반면 유능한 사람 관리자는 직원들의 개성이 프로젝트라는 화학 반응에 활력과 효율을 불어넣는 요소라는 것을 한다.
-
-
-
-> 팀의 결속력을 높여주는 사람은 일만 열심히 하는 사람 두 명의 가치가 있다.
-
-
-
-> 평균적으로 일반 소프트웨어 개발자는 자신의 업무와 관련된 책을 한권도 소유 하지 않으며 읽지도 않는다.
+* 우리는 흔히 논리적으로 질문을 했야만 상대방도 논리적으로 이해 할 수 있을 것이라고 생각한다. 나 또한 그랬기 때문에, 논리적으로 말하려고 굉장히 많이 노력하는 편이다.
+* 그러나, 강의 내용에서는 논리적인 질문 자체의 중요성 보다는 상대방의 감정 상태에 따라서 적절한 대화법을 고려해야한다고 말한다.
+* 특히 나같은 경우에 면접 때 급 들어오는 논리적 답변을 요구하는 질문 때문에, 당황해서 나도 모르게 헛소리가 나오는 경우도 있었다
+* 면접관의 입장에서 인터뷰 보는 사람들의 감정을 잘 살피고, 편안한 마음 상태에서 질문을 할 수 있도록 할 필요가 있다고 느낀다
+* 또한 사람 간의 다툼이 있을 때도, 아무리 논리적으로 설득하려고 따져들어도 상대방 감정이 상해있다면, 논리건 뭐건 그냥 소리치고 싸우는 것을 많이 보아왔기 때문에, 대화를 통해서 무언가를 얻어내거나, 원활히 이어나가기 위해서는 상대방의 감정에 대해서 더욱 귀기울일 필요가 있을 것 같다.
